7/timeserver-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: timeserver
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: timeserver-pod
  template:
    metadata:
      labels:
        pod: timeserver-pod
    spec:
      containers:
        - name: timeserver-container
          image: timeserver:vx6
