7/ingress_host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timeserver-ingress
spec:
  rules:
    - host: timeserver.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: timeserver-service
                port:
                  number: 8000
    - host: robohash.example.com
      http:
        paths:
          - path: / 
            pathType: Prefix
            backend:
              service:
                name: robohash-internal
                port:
                  number: 80
