7/ingress_tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timeserver-tls
spec:
  tls:
    - secretName: my-tls-cert
  rules:
    - host: example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: timeserver-service
              port:
                number: 8000
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: robohash-internal
              port:
                number: 80
